<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Label to show to user for Photo picker. -->
    <string name="picker_app_label">Photo picker</string>

    <!-- Title for documents backend that offers videos. [CHAR LIMIT=24] -->
    <string name="picker_videos">Videos</string>

    <!-- Add button for PhotoPicker. [CHAR LIMIT=30] -->
    <string name="picker_add">Add</string>

    <!-- Deselect button for PhotoPicker. [CHAR LIMIT=30] -->
    <string name="picker_deselect">Deselect</string>

    <!-- Deselected check button for PhotoPicker. [CHAR LIMIT=30] -->
    <string name="picker_deselected">Deselected</string>

    <!-- Select button for PhotoPicker. [CHAR LIMIT=30] -->
    <string name="picker_select">Select</string>

    <!-- Selected check button for PhotoPicker. [CHAR LIMIT=30] -->
    <string name="picker_selected">Selected</string>

    <!-- Select up to max label message for PhotoPicker. [CHAR LIMIT=30] -->
    <string name="picker_select_up_to"> {count, plural,
        =1    {Select up to <xliff:g id="count" example="1">^1</xliff:g> item}
        other {Select up to <xliff:g id="count" example="42">^1</xliff:g> items}
    }</string>

    <!-- Recent header for PhotoPicker. [CHAR LIMIT=50] -->
    <string name="picker_recent">Recent</string>

    <!-- The message for empty message on Photos tab in PhotoPicker when the item count is zero. [CHAR LIMIT=NONE] -->
    <string name="picker_photos_empty_message">No photos or videos</string>
    <!-- The message for empty message on Albums tab in PhotoPicker when the item count is zero. [CHAR LIMIT=NONE] -->
    <string name="picker_albums_empty_message">No albums</string>

    <!-- PhotoPicker view selected action text. [CHAR LIMIT=17] -->
    <string name="picker_view_selected">View selected</string>

    <!-- The text of the photos tab in PhotoPicker for 'Image/' mime type. [CHAR LIMIT=30] -->
    <string name="picker_photos">Photos</string>

    <!-- The text of the albums tab for PhotoPicker. [CHAR LIMIT=30] -->
    <string name="picker_albums">Albums</string>

    <!-- The text of the preview page for PhotoPicker. [CHAR LIMIT=30] -->
    <string name="picker_preview">Preview</string>

    <!-- PhotoPicker privacy message. [CHAR LIMIT=80] -->
    <string name="picker_privacy_message">This app can only access the photos you select</string>

    <!-- Text shown on the album item in PhotoPicker. [CHAR LIMIT=30]  -->
    <string name="picker_album_item_count"> {count, plural,
        =1    {<xliff:g id="count" example="1">^1</xliff:g> item}
        other {<xliff:g id="count" example="42">^1</xliff:g> items}
    }</string>

    <!-- Text shown on the add button for multi-select in PhotoPicker. [CHAR LIMIT=30]  -->
    <string name="picker_add_button_multi_select">Add (<xliff:g id="count" example="42">^1</xliff:g>)</string>

    <!-- Title for the category in the picker that offers items in Camera folder. [CHAR LIMIT=24] -->
    <string name="picker_category_camera">Camera</string>
    <!-- Title for the category in the picker that offers downloaded items. [CHAR LIMIT=24] -->
    <string name="picker_category_downloads">Downloads</string>
    <!-- Title for the category in the picker that offers favorite items. [CHAR LIMIT=24] -->
    <string name="picker_category_favorites">Favorites</string>
    <!-- Title for the category in the picker that offers screenshots. [CHAR LIMIT=24] -->
    <string name="picker_category_screenshots">Screenshots</string>

    <!-- Special format text in preview screen for Motion Photo. [CHAR LIMIT=30] -->
    <string name="picker_motion_photo_text">Motion Photo</string>

    <!-- Content description of when a photo was taken on [CHAR LIMIT=NONE] -->
    <string name="picker_item_content_desc"><xliff:g id="item_name" example="Photo">%1$s</xliff:g> taken on <xliff:g id="time" example="Jul 7, 2020, 12:00:00 AM">%2$s</xliff:g></string>

    <!-- Content description of an video item [CHAR LIMIT=NONE] -->
    <string name="picker_video_item_content_desc">Video taken on <xliff:g id="time" example="Jul 7, 2020, 12:00:00 AM">%1$s</xliff:g> with duration <xliff:g id="duration" example="00:03">%2$s</xliff:g></string>

    <!-- Title of the picker photo item [CHAR LIMIT=40] -->
    <string name="picker_photo">Photo</string>

    <!-- Title of the picker GIF item [CHAR LIMIT=40] -->
    <string name="picker_gif">GIF</string>

    <!-- Title of the picker motion photo item [CHAR LIMIT=60] -->
    <string name="picker_motion_photo">Motion Photo</string>

    <!-- Content description for a button that mutes the current video. [CHAR LIMIT=50] -->
    <string name="picker_mute_video">Mute video</string>

    <!-- Content description for a button that unmutes the current video. [CHAR LIMIT=50] -->
    <string name="picker_unmute_video">Unmute video</string>

    <!-- Default not selected text used by accessibility for an element that can be unselected. [CHAR LIMIT=NONE] -->
    <string name="picker_not_selected">not selected</string>

    <string name="picker_crop_label_original">Original</string>
    <string name="picker_crop_label_edit_photo">Edit Photo</string>
    <string name="picker_crop_menu_crop">Crop</string>
    <string name="picker_crop_error_input_data_is_absent" translatable="false">Both input and output Uri must be specified</string>
    <string name="picker_crop_mutate_exception_hint" translatable="false">Therefore, override color resource (ucrop_color_toolbar_widget) in your app to make it work on pre-L devices</string>
    <string name="picker_crop_rotate">Rotate</string>
    <string name="picker_crop_scale">Scale</string>
    <string name="picker_crop_crop">Crop</string>
    <string name="picker_crop_not_crop">not supported crop type</string>

</resources>
